feat: find search assistant
