# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\Assistant\Api\V1\AssistantCallbackController;
+use App\Http\Controllers\Assistant\Api\V1\SearchAssistantController;
 use App\Http\Controllers\Chat\Api\ChatController;
 use Illuminate\Support\Facades\Route;
 
@@ -8,4 +9,5 @@ Route::get('/chats', [ChatController::class, 'index']);
 
 Route::prefix('v1')->group(function () {
     Route::post('/callback', [AssistantCallbackController::class, 'handle']);
+    Route::get('/assistants/search', SearchAssistantController::class);
 });
